# genetic-algorithms

EA/: CMakeLists.txt
EA-GPU/: CMakeLists.txt
EA-GPU/include/: BoltzmannTournamentSelection.cuh  CEA.cuh  TournamentSelection.cuh  eagpu.h
EA-GPU/include/Crossover/: ArithmeticCrossover.cuh  BlendCrossover.cuh  MultiplePointCrossover.cuh  SimulatedBinaryCrossover.cuh  UniformCrossover.cuh
EA-GPU/include/Initialization/: Initialization.cuh
EA-GPU/include/Migration/: Migration.cuh
EA-GPU/include/Mutation/: BoundryMutation.cuh  CauchyMutation.cuh  NonuniformMutation.cuh  PolynominalMutation.cuh  UniformMutation.cuh
EA-GPU/include/PenaltyFunction/: DynamicPenaltyFunction.cuh
EA-GPU/include/Scaling/: BoltzmannScaling.cuh  FitnessTransferral.cuh  PowerLawScaling.cuh
EA-GPU/include/Selection/: BoltzmannTournamentSelection.cuh  SelectionSUS.cuh  TournamentSelection.cuh
EA-GPU/test/: test-main.cu
EA-GPU/unitTests/: CMakeLists.txt  test_boltzmannTournament_selection.cu  test_tournament_selection.cu
EA/include/: ArithmeticCrossover.h  BlendCrossover.h  BoltzmannScaling.h  BoltzmannTournamentSelection.h  BoundryMutation.h  CauchyMutation.h  Crossover.h  GA.h  GeneticAlgorithms.h  LinearScaling.h  MultiplePointCrossover.h  Mutation.h  NonuniformMutation.h  PolynominalMutation.h  Scaling.h  Selection.h  SelectionSUS.h  SigmaTruncation.h  SimplexCrossover.h  SimulatedBinaryCrossover.h  Sus.h  TournamentSelection.h  UniformCrossover.h  UniformMutation.h  UnimodalNormalDistributionCrossover.h
EA/include/Crossover/: ArithmeticCrossover.h  BlendCrossover.h  Crossover.h  MultiplePointCrossover.h  SimplexCrossover.h  SimulatedBinaryCrossover.h  UniformCrossover.h
EA/include/Mutation/: BoundryMutation.h  CauchyMutation.h  Mutation.h  NonuniformMutation.h  PolynominalMutation.h  UniformMutation.h
EA/include/PenaltyFunction/: DynamicPenaltyFunction.h  PenaltyFunction.h
EA/include/Scaling/: BoltzmannScaling.h  FitnessTransferral.h  LinearScaling.h  PowerLawScaling.h  Scaling.h  SigmaTruncation.h
EA/include/Selection/: BoltzmannTournamentSelection.h  Selection.h  SelectionSUS.h  TournamentSelection.h
EA/src/: AritchmeticCrossover.cpp  BlendCrossover.cpp  BoundryMutation.cpp  CauchyMutation.cpp  MultiplePointCrossover.cpp  NonuniformMutation.cpp  PolynominalMutation.cpp  SelectionSUS.cpp  SimplexCrossover.cpp  SimulatedBinaryCrossover.cpp  Sus.cpp  TournamentSelection.cpp  UniformCrossover.cpp  UniformMutation.cpp  UnimodalNormalDistributionCrossover.cpp
EA/src/Crossover/: AritchmeticCrossover.cpp  BlendCrossover.cpp  MultiplePointCrossover.cpp  SimplexCrossover.cpp  SimulatedBinaryCrossover.cpp  UniformCrossover.cpp
EA/src/Mutation/: BoundryMutation.cpp  CauchyMutation.cpp  NonuniformMutation.cpp  PolynominalMutation.cpp  UniformMutation.cpp
EA/src/Scaling/: BoltzmannScaling.cpp  FitnessTransferal.cpp  LinearScaling.cpp  PowerLawScaling.cpp  SigmaTruncation.cpp
EA/src/Selection/: BoltzmannTournamentSelection.cpp  SelectionSUS.cpp  TournamentSelection.cpp
EA/test/: main.cpp
SGA/include/CPU/: SGA.h
SGA/include/GPU/: SGA.cuh
SGA/src/CPU/: SGA.cpp
SGA/src/GPU/: SGA.cu
SGA/test/: mainCPU.cpp  mainGPU.cu
include/CPU/: SGA.h  cross_over.h
include/GPU/: SGA.cuh
src/CPU/: SGA.cpp  cross_over.cpp
src/GPU/: SGA.cu  cross_over.cu
test/: main.cpp  mainCPU.cpp  mainGPU.cpp
